--- a/src/quizCreation/templates/create_quiz.html
+++ b/src/quizCreation/templates/create_quiz.html
@@ -3,9 +3,9 @@
 {% load static %}
 {% block content %}
 
-    <div id="createQuiz">
+    <div class="my-5 col-lg-9 mx-auto " id="createQuiz">
 
-    <div class="card my-5 col-lg-9 mx-auto px-3 ">
+    <div class="card ">
         <div class="card-body">
 
         <form class="my-2 mx-auto"
