Fix layout change password

--- a/src/templates/dashboard2/change_password_dashboard.html
+++ b/src/templates/dashboard2/change_password_dashboard.html
@@ -8,16 +8,13 @@
 
 
 
-    <div class="row">
-        <h1 class="text-center">Change Account Password</h1>
-    </div>
 
 
 
     <div class="row">
-        <div class="col-xl-12">
+        <div class="col-xl-9 mx-auto">
             <div class="card">
-                <h5 class="card-title">Change password</h5>
+                <h5 class="m-3">Change password</h5>
 
 
                 <div class="card-body">
@@ -27,7 +24,7 @@
                         {% for field in form %}
 
 
-                            <div class="card-title">
+                            <div class="">
 
 
 
@@ -43,8 +40,8 @@
 
                                             {{field}}
                                         </div>
-                                        {{field.errors}}
                                         <div class="invalid-feedback">
+                                            {{field.errors}}
                                         </div>
                                         <div class="valid-feedback">
                                             Looks good!
