--- a/src/quizCreation/templates/create_quiz.html
+++ b/src/quizCreation/templates/create_quiz.html
@@ -20,9 +20,11 @@
             <div class="mb-3">
                 <label class="form-label" for="">Enter a name for your quiz</label>
                 <input type="text" name="quiz_name"
-                       class="form-control" id="name" placeholder="Enter here"
+                       class="form-control" id="name" placeholder="Enter here "
                        required="" maxlength=300>
+                <p>Note: Name is only shown to you and not displayed to users</p>
             </div>
+
 
 
 
