--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -12,45 +12,45 @@
 
 </select>
 
-<div class="row p-1" style="gap: 1.5rem !important;">
+<div class="row p-1 justify-content-center" style="gap: 1.5rem !important;">
     <div role="button" onclick="SelectDeselect(this);" id="card_text"
-         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=text style="min-width:8rem;border:3px solid white;">
-        <div class="text-center py-4">
-            <h4 class="card-title">Your text</h4>
+         class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=text style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3">Custom Text</h4>
             <p class="text-small">Great for sales copy, instructions and information</p>
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
     </div>
 
+    <div role="button" onclick="SelectDeselect(this);" id="card_AgreeDisagree"
+    class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=AgreeDisagree style="min-width:8rem;border:3px solid white;">
+   <div class="text-center py-2">
+       <h4 class="card-title border border-dark border-3 p-3">Agree Disagree</h4>
+       <p class="text-small">A table of agree disagree questions where users can answer mostly agree, disagree etc...</p>
+       <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
+   </div>
+</div>
   
 
     <div role="button" onclick="SelectDeselect(this);" id="card_TextInput"
-         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=TextInput style="min-width:8rem;border:3px solid white;">
-        <div class="text-center py-4">
-            <h4 class="card-title">Text input</h4>
+         class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=TextInput style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3">Text input</h4>
             <p class="text-small">Useful to get long text information from users</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
     </div>
 
-    <div role="button" onclick="SelectDeselect(this);" id="card_EmailInput"
-         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=EmailInput style="min-width:8rem;border:3px solid white;">
-        <div class="text-center py-4">
-            <h4 class="card-title">Email input</h4>
-            <p class="text-small">Capture email addresses easily with this element</p>
 
-            <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
-        </div>
-    </div>
 
 
 
 
     <div role="button" onclick="SelectDeselect(this);" id="card_MultipleChoice"
-         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=MultipleChoice style="min-width:8rem;border:3px solid white;">
-        <div class="text-center py-4">
-            <h4 class="card-title">Multiple Choice</h4>
+         class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=MultipleChoice style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3">Multiple Choice</h4>
             <p class="text-small">Swatches for multiple choice questions</p>
 
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
@@ -59,9 +59,9 @@
 
 
     <div role="button" onclick="SelectDeselect(this);" id="card_SingleChoice"
-         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=SingleChoice style="min-width:8rem;border:3px solid white;">
-        <div class="text-center py-4">
-            <h4 class="card-title">Single Choice</h4>
+         class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=SingleChoice style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3">Single Choice</h4>
             <p class="text-small">Swatches where there is only a single choice</p>
 
 
@@ -70,33 +70,36 @@
     </div>
 
 
-    <div role="button" onclick="SelectDeselect(this);" id="card_AgreeDisagree"
-         class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=AgreeDisagree style="min-width:8rem;border:3px solid white;">
-        <div class="text-center py-4">
-            <h4 class="card-title">Agree Disagree Table</h4>
-            <p class="text-small">A table of agree disagree questions where users can answer mostly agree, disagree etc...</p>
-            <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
-        </div>
-    </div>
+
 
     <div role="button" onclick="SelectDeselect(this);" id="card_CharInput"
-    class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=CharInput style="min-width:8rem;border:3px solid white;">
-   <div class="text-center py-4">
-       <h4 class="card-title">Character input</h4>
+    class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=CharInput style="min-width:8rem;border:3px solid white;">
+   <div class="text-center py-2">
+       <h4 class="card-title border border-dark border-3 p-3">Character input</h4>
        <p class="text-small">Useful to get short text information from users</p>
 
        <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
    </div>
 </div>
 
-    <div role="button" onclick="SelectDeselect(this);" id="card_NumberInput"
-    class="card card_choice border-3 border-white col-12 col-sm-5 " data-option=NumberInput style="min-width:8rem;border:3px solid white;">
-   <div class="text-center py-4">
-       <h4 class="card-title">Number input</h4>
+<div role="button" onclick="SelectDeselect(this);" id="card_NumberInput"
+    class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=NumberInput style="min-width:8rem;border:3px solid white;">
+   <div class="text-center py-2">
+       <h4 class="card-title border border-dark border-3 p-3">Number input</h4>
        <p class="text-small">A simple number input field</p>
 
        <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
    </div>
+</div>
+
+<div role="button" onclick="SelectDeselect(this);" id="card_EmailInput"
+class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=EmailInput style="min-width:8rem;border:3px solid white;">
+<div class="text-center py-2">
+   <h4 class="card-title border border-dark border-3 p-3">Email input</h4>
+   <p class="text-small">Capture email addresses easily with this element</p>
+
+   <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
+</div>
 </div>
 
 </div>
