--- a/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
+++ b/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
@@ -1,12 +1,18 @@
-<div class="table-responsive">
+<style>
+    .table strong, .table {
+        color: #302929;
+    }
+</style>
+
+<div class="table-responsive" style="font-size:1.5rem; !important">
 
 
-<table class="table header-border table-bordered table-responsive-sm">
+<table class="table header-border table-bordered table-responsive-sm" style="font-size:1.5rem; !important">
     <thead class=>
         <strong>
 
         <tr>
-            <td class="border-dark"  style="width:40%">
+            <td class="border-dark"  style="width:40%;font-size:1.5rem; !important" >
                 <strong>
                     Question
                 </strong>
@@ -37,6 +43,7 @@
                 </strong>
             </td>
         </tr>
+    </strong>
         
     </thead>
 
