--- a/src/quizRender/templates/quiz_completed_content.html
+++ b/src/quizRender/templates/quiz_completed_content.html
@@ -4,7 +4,7 @@
     <div class="col-lg-9 mx-auto p-5
                 5 bg-white border-2 bg-shadow">
                 <div class="row d-flex justify-content-center">
-
+                    {% if user_quiz.logo %}
                     <div class="mb-3">
 
                         <img class="img-fluid" style="height:5rem;"  src="{% if user_quiz.logo %}
@@ -13,6 +13,7 @@
                         
                         >
                     </div>
+                    {% endif %}
          
         
                 </div>
