--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -240,7 +240,7 @@
                         {% if not user.is_authenticated %}
                         <li>
                             <a href="{% url 'login_user' %}" class="ai-icon" aria-expanded="false">
-                                <span class="nav-text">Home</span>
+                                <span class="nav-text">Login</span>
                             </a>
                         </li>
                         <li>
