--- a/src/templates/dashboard2/htmx_elements/subscribe.html
+++ b/src/templates/dashboard2/htmx_elements/subscribe.html
@@ -56,7 +56,7 @@
       <script src="https://js.stripe.com/v3/"></script>
       <div class="col-10 mx-auto p-1 responsiveModal">
         <h4>
-          What you get when you subscribe to the {{subscription_choice.subscription_name}}
+          What you get when you subscribe to the {{subscription_choice.subscription_name}} plan
 
         </h4>
         {% autoescape off %}
