--- a/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
+++ b/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
@@ -12,32 +12,32 @@
         <strong>
 
         <tr>
-            <td class="border-dark"  style="width:40%;font-size:1.5rem; !important" >
+            <td class="border-dark text-center" style="vertical-align:bottom;" >
                 <strong>
                     Question
                 </strong>
             </td>
-            <td class="border-dark" >
+            <td class="border-dark text-center" style="vertical-align:bottom;" >
                 <strong>
                     Mostly agree
                 </strong>
             </td>
-            <td class="border-dark" >
+            <td class="border-dark text-center" style="vertical-align:bottom;" >
                 <strong>
                     Agree
                 </strong>
             </td>
-            <td class="border-dark" >
+            <td class="border-dark text-center" style="vertical-align:bottom;" >
                 <strong>
                     Not sure
                 </strong>
             </td>
-            <td class="border-dark" >
+            <td class="border-dark text-center" style="vertical-align:bottom;" >
                 <strong>
                     Disagree
                 </strong>
             </td>
-            <td class="border-dark" >
+            <td class="border-dark text-center" style="vertical-align:bottom;" >
                 <strong>
                     Mostly disagree
                 </strong>
