Begin work on conversion tracking task backend and also add meta tag

--- a/src/quizConversionTracking/templates/quiz_conversion_tracking/conversion_api.html
+++ b/src/quizConversionTracking/templates/quiz_conversion_tracking/conversion_api.html
@@ -9,27 +9,35 @@
 >
 <h4>Integrate Facebook or Tiktok conversion API and pixel</h4>
 {% if conversion_api_pixels %}
-<div class="table-responsive my-5">
+<div class="table-responsive my-3">
     <h6>Added integrations</h6>
 
 <table class="table header-border table-responsive-sm">
     <thead>
         <tr>
             <td>
-                Integration type
+                <strong>
+                    Integration type
+                </strong>
 
             </td>
             <td>
-                Conversion API token
+                <strong>
+                    Conversion API token
+                </strong>
                 
             </td>
             <td>
-                Pixel ID
+                <strong>
+                    Pixel ID
+                </strong>
                 
             </td>
 
             <td>
-                Delete?
+                <strong>
+                    Delete?
+                </strong>
             </td>
         </tr>
     </thead>
