Add pixel to quiz and quiz completion

--- a/src/quizConversionTracking/templates/quiz_conversion_tracking/conversion_api.html
+++ b/src/quizConversionTracking/templates/quiz_conversion_tracking/conversion_api.html
@@ -7,7 +7,7 @@
     class="mb-5 pb-3"
 
 >
-<h4>Integrate Facebook or Tiktok conversion API and pixel</h4>
+<h4>Integrate Facebook or Tiktok conversion API</h4>
 {% if conversion_api_pixels %}
 <div class="table-responsive my-3">
     <h6>Added integrations</h6>
@@ -73,7 +73,7 @@
 
 
 <center class="my-4">
-    No Facebook or Tiktok conversion API/pixel integration added
+    No Facebook or Tiktok conversion API integration added
 </center>
 
 {% endif %}
