--- a/src/quizRender/templates/quiz_form.html
+++ b/src/quizRender/templates/quiz_form.html
@@ -102,5 +102,10 @@
     {% autoescape off %}
     {{quiz_page.quiz.analytics_scripts}}
     {% endautoescape %}
+    <script>
+        fbq('track', 'PageView', {}, {eventID: '{{pv_event_unique_id}}'});
+        fbq('track', 'ViewContent', {}, {eventID: '{{vc_event_unique_id}}'});
+
+      </script>
     {% endif %}
 </form>
